--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
 <link rel="shortcut icon" href="favicon.png" />
 <link rel="apple-touch-icon" href="favicon.png" />
-<title>Meu Filho — Gerador de Convites</title>
+<title>Meu Filho</title>
 <style>
   :root{
     --bg-primary:#1a0f0a;
