--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<!-- saved from url=(0071)file:///C:/Users/User/Documents/GitHub/Meu-Filho-Convites/index.html -->
-<html lang="pt-BR"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="icon" type="image/png" sizes="32x32" href="file:///C:/Users/User/Documents/GitHub/Meu-Filho-Convites/favicon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="file:///C:/Users/User/Documents/GitHub/Meu-Filho-Convites/favicon.png">
-<link rel="shortcut icon" href="file:///C:/Users/User/Documents/GitHub/Meu-Filho-Convites/favicon.png">
-<link rel="apple-touch-icon" href="file:///C:/Users/User/Documents/GitHub/Meu-Filho-Convites/favicon.png">
+<!doctype html>
+<html lang="pt-BR">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
+<link rel="shortcut icon" href="favicon.png" />
+<link rel="apple-touch-icon" href="favicon.png" />
 <title>Meu Filho</title>
 <style>
   :root{
